--- a/templates/profile.html
+++ b/templates/profile.html
@@ -222,7 +222,7 @@
 
   <!-- 引入模态框 -->
   {% include 'modals/addProjectProfileModal.html' %}
-  {% include 'modals/avatarProfileModal.html' %}
+  {% include 'modals/editAvatarModal.html' %}
   <!-- - -->
 {% endblock %}
 
