--- a/templates/register.html
+++ b/templates/register.html
@@ -221,7 +221,7 @@
   </div>
 
   <!-- 引入模态框 -->
-  {% include 'modals/avatarRegisterModal.html' %}
+  {% include 'modals/addAvatarModal.html' %}
   <!-- - -->
 {% endblock %}
 
