--- a/templates/modals/addAvatarModal.html
+++ b/templates/modals/addAvatarModal.html
@@ -37,8 +37,9 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
         <button type="button" class="btn btn-secondary" id="cancelCropBtn">清空</button>
         <button type="button" class="btn btn-primary" id="cropAvatarBtn">裁剪</button>
-        <button type="button" class="btn btn-success" id="saveAvatarBtn"><i class="fas fa-save"></i> 保存头像</button>
+        <button type="button" class="btn btn-success" id="saveAvatarBtn"><i class="fas fa-save"></i> 保存</button>
       </div>
+      <!-- -footer- -->
     </div>
   </div>
 </div>
