--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -86,7 +86,7 @@
         <h5 class="mb-0"><i class="fas fa-list"></i> 项目列表</h5>
         <div class="input-group" style="width: 300px">
           <input type="text" class="form-control" id="searchInput" placeholder="搜索项目..." />
-          <button class="btn btn-outline-primary" type="button"><i class="fas fa-search"></i></button>
+          <button class="btn btn-outline-primary" type="button" id="searchButton"><i class="fas fa-search"></i></button>
         </div>
       </div>
       <div class="card-body">
@@ -170,9 +170,9 @@
                         {% if project.demo_url %}
                           <a href="{{ project.demo_url }}" class="btn btn-outline-primary" target="_blank" title="查看演示"><i class="fas fa-external-link-alt"></i></a>
                         {% endif %}
-                        <button class="btn btn-outline-warning" onclick="toggleFeatured({{ project.id }}, {{ project.is_featured }})" title="切换精选状态"><i class="fas fa-star"></i></button>
-                        <button class="btn btn-outline-info" onclick="editProject({{ project.id }})" title="编辑项目"><i class="fas fa-edit"></i></button>
-                        <button class="btn btn-outline-danger" onclick="deleteProject({{ project.id }})" title="删除项目"><i class="fas fa-trash"></i></button>
+                        <button class="btn btn-outline-warning toggle-featured" data-project-id="{{ project.id }}" data-is-featured="{{ project.is_featured }}" title="切换精选状态"><i class="fas fa-star"></i></button>
+                        <button class="btn btn-outline-info edit-project" data-project-id="{{ project.id }}" title="编辑项目"><i class="fas fa-edit"></i></button>
+                        <button class="btn btn-outline-danger delete-project" data-project-id="{{ project.id }}" title="删除项目"><i class="fas fa-trash"></i></button>
                       </div>
                     </td>
                   </tr>
